# fastapi

./: .gitignore
fastapi_project/basic/: sample.json
fastapi_project/basic2/schemas/: responses.py
fastapi_project/docs/: FastAPI 01 통신 기초.md  FastAPI 02 FastAPI 기초.md  FastAPI 03 FastAPI 중급.md  FastAPI 04 FastAPI 고급.md
fastapi_project/inference/models/: model_loader.py
fastapi_project/websock/: websocket_client.py  websocket_client2.py
instructor/: pyproject.toml  requests_test.ipynb
instructor/basic/: main.py
instructor/basic2/: main.py  sample.json
instructor/basic2/routers/: __init__.py  default.py  images.py  items.py
instructor/basic2/schemas/: requests.py
instructor/inference/: main.py
instructor/socket/: client.py  server.py
instructor/websock/: main.py
