[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["narae"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.11"}
opencv-python = "^4.11.0.86"
mediapipe = "^0.10.21"
langchain = "^0.3.20"
langchain-community = "^0.3.19"
langchain-core = "^0.3.44"
langchain-openai = "^0.3.8"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
